--- a/contacto.html
+++ b/contacto.html
@@ -85,9 +85,53 @@
         main li a {
             text-decoration: none;
         }
+
+        .contact_main_div {
+            width: 100%;
+            display: flex;
+        }
+
+        #map {
+            width: 50%;
+            position: sticky;
+            top: 0;
+        }
+
+        .contact_info_container {
+            width: 50%;
+            height: 100%;
+            padding: 2rem 5rem 4rem;
+            box-sizing: border-box;
+            text-wrap: balance;
+        }
+
+        @media screen and (max-width: 600px) {
+            .contact_main_div {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            #map {
+                width: 100%;
+                position: relative;
+                height: 40vh;
+                top: 0px;
+                outline-style: none;
+            }
+
+            .contact_info_container {
+                padding: 1rem;
+                width: 100%;
+                font-size: 13px;
+            }
+
+            .contact_info_container li.mail_info {
+                font-size: 9px;
+            }
+        }
     </style>
 </head>
-
 <body>
     <header>
         <div class="menu_title">
@@ -177,19 +221,19 @@
         </div>
     </header>
     <main>
-        <div style="width: 100%; display: flex;">
-            <div style="width: 50%; position: sticky; top: 0;" id="map"></div>
-            <div style="width: 50%; height: 100%;">
-                <div style="padding: 2em 5em 4em;">
+        <div class="contact_main_div">
+            <div id="map"></div>
+            <div class="contact_info_container">
+                <div>
                     <h2>Información</h2>
                     <ul>
                         <li><img class="icon" src="./assets/icons/call.svg">
                             <a href="tel:+34971461109">(+34) 971 461 109</a>
                         </li>
-                        <li>
+                        <li class="mail_info">
                             <img class="icon" src="./assets/icons/email.svg">
-                            <a href="mailto:secretariageneralfbjudo@gmailcom">
-                                secretariageneralfbjudo@gmailcom
+                            <a href="mailto:secretariageneralfbjudo@gmail.com">
+                                secretariageneralfbjudo@gmail.com
                             </a>
                         </li>
                         <li>
@@ -207,7 +251,9 @@
                             </a>
                         </li>
                     </ul>
-                    <h2>Contacto</h2>
+                </div>
+                <div>
+                    <h3>Contacto</h3>
                     <form style="width: 100%; display: flex; gap: 1em; flex-direction: column;">
                         <div style="display: flex; gap: 1em;">
                             <input type="text" name="name" placeholder="Nombre">
