--- a/locator.html
+++ b/locator.html
@@ -562,12 +562,10 @@
             <div class="column rrss">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/instagram.svg"><a target="_blank"
-                                href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
-                        <li><img class="icon" src="./assets/icons/facebook.svg"><a target="_blank"
-                                href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
-                        <li><img class="icon" src="./assets/icons/youtube.svg"><a target="_blank"
-                                href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
+                        <li><img class="icon" src="./assets/icons/facebook.svg"><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
+                        <li><img class="icon" src="./assets/icons/instagram.svg"><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
+                        <li><img class="icon" src="./assets/icons/twitter.svg"/><a target="_blank" href="https://twitter.com/fbjyda">Twitter</a></li>
+                        <li><img class="icon" src="./assets/icons/youtube.svg"><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
                     </ul>
                 </div>
             </div>
@@ -630,7 +628,14 @@
                                 <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
                                     Avinguda Uruguay, S/N, 07010, Palma
                                 </a>
-                                <span>Lunes-Viernes de 9:00 a 14:00</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/clock.svg">
+                            <div class="address">
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Lunes-Viernes de 9:00 a 14:00
+                                </a>
                             </div>
                         </li>
                     </ul>
