--- a/noticia.html
+++ b/noticia.html
@@ -8,6 +8,15 @@
     <link rel="icon" type="image/x-icon" href="./assets/img/Logo_fede-150x150.png">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <style>
+        .news_highlights_list {
+            display: flex;
+            padding: 0;
+            margin: .5em 0;
+            text-transform: uppercase;
+            font-size: 13px;
+            flex-wrap: wrap;
+        }
+
         .news_highlights_list li:not(:last-child)::after{
             background-color: #6b6b6b;
             content: "";
@@ -47,6 +56,56 @@
             font-size: 13px;
             padding: 0.25em 0;
             text-align: right;
+        }
+
+        .noticia_main_div {
+            width: 100%;
+            display: flex;
+            height: calc(100vh - 5em);
+        }
+
+        .news_main_image_container {
+            width: 65%;
+            overflow: hidden;
+            justify-content: center;
+            display: flex;
+            position: relative;
+        }
+
+        .news_header_container {
+            width: 35%;
+            height: 100%;
+            padding: 5em;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        .news_header_container > h1 {
+            margin: .5rem 0;
+            color: #000;
+        }
+
+        @media screen and (max-width: 600px) {
+            .noticia_main_div {
+                flex-direction: column;
+                height: fit-content;
+            }
+
+            .news_main_image_container {
+                width: 100%;
+                height: 40vh;
+            }
+
+            .news_header_container {
+                width: 100%;
+                padding: 1rem;
+            }
+
+            .news_header_container > h1 {
+                font-size: 24px;
+            }
         }
     </style>
 </head>
@@ -133,32 +192,30 @@
         </div>
     </header>
     <main>
-        <div style="width: 100%;display: flex;height: calc(100vh - 5em);">
-            <div style="width: 65%;overflow: hidden;justify-content: center;display: flex;position: relative;">
+        <div class="noticia_main_div">
+            <div class="news_main_image_container">
                 <img src="https://via.placeholder.com/1600x1080/000/FFFFFF" alt="Imagen 1" style="position: relative; width: auto; height: 100%; object-fit: cover;">
             </div>
-            <div style="width: 35%; height: 100%;">
-                <div style="padding: 5em;height: 100%;box-sizing: border-box;display: flex;flex-direction: column;justify-content: center;">
-                    <ul class="news_highlights_list" style="display: flex; padding: 0;margin: .5em 0;text-transform: uppercase; font-size: 13px;flex-wrap: wrap;">
-                        <li>Kendo</li>
-                        <li>Infantil</li>
-                        <li>Campeonato</li>
+            <div class="news_header_container" >
+                <ul class="news_highlights_list">
+                    <li>Kendo</li>
+                    <li>Infantil</li>
+                    <li>Campeonato</li>
+                </ul>
+                <h1>Grandes resultados del Kendo Balear en el I Campeonato de España Infal y cadete.</h1>
+                <h3 style="margin: .5rem 0;">Kendo Balear arrasa en el I Campeonato de España Infal y Cadete con impresionantes logros.</h3>
+                <div class="share_news">
+                    Compartir:
+                    <ul>
+                        <li><a target="_blank" href="https://api.whatsapp.com/send?text="><img class="icon" src="./assets/icons/whatsapp.svg"/></a></li>
+                        <li><a target="_blank" href="http://www.facebook.com/sharer.php?u="><img class="icon" src="./assets/icons/facebook.svg"/></a></li>
+                        <li><a target="_blank" href="https://twitter.com/intent/tweet?url="><img class="icon" src="./assets/icons/twitter.svg"/></a></li>
+                        <li><a target="_blank" href="https://www.pinterest.es/pin/create/button/?media=https://via.placeholder.com/1600x1080/a9a9a9/000000&url="><img class="icon" src="./assets/icons/pinterest.svg"/></a></li>
+                        <li><a target="_blank" href="https://www.linkedin.com/sharing/share-offsite/?url="><img class="icon" src="./assets/icons/linkedin.svg"/></a></li>
                     </ul>
-                    <h1 style="margin: .5rem 0;color: #000;">Grandes resultados del Kendo Balear en el I Campeonato de España Infal y cadete.</h1>
-                    <h3 style="margin: .5rem 0;">Kendo Balear arrasa en el I Campeonato de España Infal y Cadete con impresionantes logros.</h3>
-                    <div class="share_news">
-                        Compartir:
-                        <ul>
-                            <li><a target="_blank" href="https://api.whatsapp.com/send?text="><img class="icon" src="./assets/icons/whatsapp.svg"/></a></li>
-                            <li><a target="_blank" href="http://www.facebook.com/sharer.php?u="><img class="icon" src="./assets/icons/facebook.svg"/></a></li>
-                            <li><a target="_blank" href="https://twitter.com/intent/tweet?url="><img class="icon" src="./assets/icons/twitter.svg"/></a></li>
-                            <li><a target="_blank" href="https://www.pinterest.es/pin/create/button/?media=https://via.placeholder.com/1600x1080/a9a9a9/000000&url="><img class="icon" src="./assets/icons/pinterest.svg"/></a></li>
-                            <li><a target="_blank" href="https://www.linkedin.com/sharing/share-offsite/?url="><img class="icon" src="./assets/icons/linkedin.svg"/></a></li>
-                        </ul>
-                    </div>
-                    <div class="publication_date">
-                        Publicado el 04-06-2023 a las 23:31
-                    </div>
+                </div>
+                <div class="publication_date">
+                    Publicado el 04-06-2023 a las 23:31
                 </div>
             </div>
         </div>
@@ -183,9 +240,10 @@
             <div class="column rrss">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/instagram.svg"/><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
-                        <li><img class="icon" src="./assets/icons/facebook.svg"/><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
-                        <li><img class="icon" src="./assets/icons/youtube.svg"/><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
+                        <li><img class="icon" src="./assets/icons/facebook.svg"><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
+                        <li><img class="icon" src="./assets/icons/instagram.svg"><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
+                        <li><img class="icon" src="./assets/icons/twitter.svg"/><a target="_blank" href="https://twitter.com/fbjyda">Twitter</a></li>
+                        <li><img class="icon" src="./assets/icons/youtube.svg"><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
                     </ul>
                 </div>
             </div>
@@ -193,6 +251,7 @@
                 <div class="footer_column_body">
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Información General</a>
+                        </li>
                         <li><a href="#">Organigrama</a></li>
                         <li><a href="#">Censo Electoral 2020-2024</a></li>
                         <li><a href="#">Estatutos y Reglamentos</a></li>
@@ -202,10 +261,15 @@
                     </ul>
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Escuela Federativa</a>
+                        </li>
                         <li><a href="#">Formación</a>
+                        </li>
                         <li><a href="#">Programas</a>
+                        </li>
                         <li><a href="#">Normativa EFN</a>
+                        </li>
                         <li><a href="#">Calendario EFN</a>
+                        </li>
                     </ul>
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Clubs Baleares</a></li>
@@ -227,13 +291,29 @@
             <div class="column">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/telephone.svg"/><a href="tel:+34971461109">(+34) 971 461 109</a></li>
-                        <li><img class="icon" src="./assets/icons/email-433830.svg"/><a href="mailto:secretariageneralfbjudo@gmail.com">secretariageneralfbjudo@gmail.com</a></li>
+                        <li><img class="icon" src="./assets/icons/call.svg">
+                            <a href="tel:+34971461109">(+34) 971 461 109</a>
+                        </li>
                         <li>
-                            <img class="icon" src="./assets/icons/location-433840.svg"/>
+                            <img class="icon" src="./assets/icons/email.svg">
+                            <a href="mailto:secretariageneralfbjudo@gmailcom">
+                                secretariageneralfbjudo@gmailcom
+                            </a>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/location.svg">
                             <div class="address">
-                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">Avinguda Uruguay, S/N, 07010, Palma</a>
-                                <span>Lunes-Viernes de 9:00 a 14:00</span>
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Avinguda Uruguay, S/N, 07010, Palma
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/clock.svg">
+                            <div class="address">
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Lunes-Viernes de 9:00 a 14:00
+                                </a>
                             </div>
                         </li>
                     </ul>
