--- a/noticias.html
+++ b/noticias.html
@@ -47,24 +47,6 @@
             background-color: #f7e8cd;
         }
 
-        .news {
-            padding: 2em 3em;
-            background-size: cover;
-            background-position: center;
-            background-image: url(./assets/img/news_background.jpg);
-        }
-
-        .other_news {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1em;
-        }
-
-        .specific_news .news_piece {
-            width: 20em;
-        }
-
         .slider > div {
             position: absolute;
             display: flex;
@@ -207,6 +189,45 @@
             display: flex;
             gap: 0.5em;
         }
+
+        .news_list_main_div {
+            width: 100%;
+            display: flex;
+        }
+
+        .news_list_filter_container {
+            width: 20%;
+            height: 100vh;
+            position: sticky;
+            top: 0;
+            box-shadow: 0px 3px 1em rgba(0, 0, 0, .1);
+        }
+
+        .news_list_grid_container {
+            width: 80%;
+            height: 100%;
+        }
+
+        @media screen and (max-width: 600px) {
+            .news_list_main_div {
+                flex-direction: column;
+            }
+
+            .news_list_filter_container{
+                width: 100%;
+                height: fit-content;
+                position: relative;
+            }
+
+            .news_list_grid_container {
+                width: 100%;
+                height: fit-content;
+            }
+
+            .news {
+                padding: 1rem;
+            }
+        }
     </style>
 </head>
 
@@ -292,9 +313,8 @@
         </div>
     </header>
     <main>
-        <div style="width: 100%; display: flex;">
-            
-            <div style="width: 20%;height: 100vh;position: sticky;top: 0;box-shadow: 0px 3px 1em rgba(0, 0, 0, .1);">
+        <div class="news_list_main_div">
+            <div class="news_list_filter_container">
                 <div class="filter_searcher">
                     <input type="text" placeholder="Buscar...">
                 </div>
@@ -358,7 +378,7 @@
                     </ul>
                 </div>
             </div>
-            <div style="width: 80%; height: 100%;">
+            <div class="news_list_grid_container">
                 <div class="news">
                     <div class="other_news specific_news">
                         <div class="news_piece">
